syntax = "proto3";

package pad.user.proto;

option go_package = "pad/services/user/services/user";

import "google/protobuf/empty.proto";

service User {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (google.protobuf.Empty) {}
}

message LoginRequest {
  string name     = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string name     = 1;
  string password = 2;
}
